# cabrillo_rov_2023

./: .dockerignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Dockerfile.devcontainer  README.md  makefile
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-devbox.yaml
bags/h264_recording/: h264_recording.md  metadata.yaml
bags/imu_recording/: imu_recording.db3  metadata.yaml
bags/joy_recording/: README.md  metadata.yaml  rosbag2_2024_01_04-09_59_21_0.db3  rosbag2_2024_01_04-14_57_51_0.db3
doc/: architecture.md  camera_notes.md  controller_debug.ipynb  dev_notes.md  firmware_config.ini  getting_started.md  github.md  hardware_notes.md  params.md  rc150.md  ros_bags.md  rosdep_notes.md  run.md  rviz.md  set_remote_params.md  setup_notes.md  setup_procedure.md  shutdown-procedure.md  style_guide_python.md  virtualbox_setup.md
doc/guidelines/: style_guide.md
doc/guides/: style_guide.md
launch/: debug.py  debug_kinematics.rviz  deck.launch.py  deck.py  deck.yaml  kinematics_viz.launch.py  rov.launch.py  rov.py  rov.yaml
pico/: seahawk.elf
seahawk-vpf/: README.md  requirements.txt
seahawk-vpf/vpf-deck/: README.md
seahawk-vpf/vpf-deck/CIRCUITPY/: code.py
seahawk-vpf/vpf-float/: README.md
seahawk-vpf/vpf-float/CIRCUITPY/: code.py  main.py
setup/: .dockerignore  Dockerfile.devcontainer  README.md  SeaHawk-DECK.md  ansible-playbook-deploy.yaml  ansible_inventory.yaml  ansible_inventory.yml  ansible_inventory_devkit.yaml  ansible_playbook.yaml  ansible_playbook.yml  ansible_pythonparts_install.yaml  ansible_ros2_install.yaml  deploy.yaml  dev_vm_inventory.yaml  devbox.yaml  hosts.yaml  hosts_devkit.yaml  playbook-build.yaml  playbook-deploy.yaml  playbook-provision.yaml  rov.yaml  rpi.yaml  user-data
setup/image/: .gitignore  README.md  user-data
setup/roles/MCP2221/tasks/: main.yaml
setup/roles/common/tasks/: main.yaml
setup/roles/deck/tasks/: main.yaml
setup/roles/mcu/tasks/: main.yaml
setup/roles/ros/tasks/: ansible_ros2_configure.yaml  (+1 more)
setup/seahawk-deck/: README.md  user-data
setup/seahawk-rov/: README.md  user-data
src/i2c_proxy/: i2c_proxy.py  requirements.txt
src/logic_tube_bme280/: logic_tube_bme280.py
src/our_examples/: package.xml  setup.cfg  setup.py
src/our_examples/example_publisher/: example_pub.py
src/our_examples/example_subscriber/: example_sub.py
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher.py  subscriber.py
src/seahawk/: CMakeLists.txt  package.xml  plugin.xml  setup.cfg  setup.py
src/seahawk/launch/: deck.launch.py  kinematics_viz.launch.py  monitor.launch.py  rov.launch.py  rviz.launch.py  seahawk_gazebo.launch.py  seahawk_sim.launch.py  seahawk_sim_gui.launch.py  seahawk_sim_server.launch.py  seahawk_sim_server.py
src/seahawk/resources/: monitor.perspective
src/seahawk/seahawk_deck/: camera_test.py  dash.py  horizon.py  input_keyboard.py  input_xbox_one.py  keyboard.py  modifiedHorizon.py  motor_encoding.py  newtons_to_pwm.tsv  pilot_input.py  rviz_markers.py  set_remote_params.py  test.py  thrust.py  thrust_gz_repub.py  thrust_to_current.tsv  thrustverify.py
src/seahawk/seahawk_deck/dash_styling/: check_list.txt  color_palette.py  countdown_widget.txt  numeric_data_widget.txt  state_widget.txt  tab_widget.txt  term_widget.txt
src/seahawk/seahawk_deck/dash_widgets/: check_list.py  countdown_widget.py  horizon.py  numeric_data_widget.py  state_widget.py  tasks.json  tasks.txt  term_test.py  term_widget.py  test.py  throttle_curve_widget.py  turn_bank_indicator_widget.py
src/seahawk/seahawk_rov/: DS18B20.py  __init__.py  __main__.py  bme280.py  bno085.py  claws.py  debug.py  debug_node.py  helper_functions.py  logic_tube_motor.py  pressure_sensor.py  thrust_box_servo.py
src/seahawk_control/: CMakeLists.txt  package.xml
src/seahawk_deck/: package.xml  setup.cfg  setup.py
src/seahawk_deck/launch/: 2023-06-01.perspective  deck.launch.py  deck_video.launch.py  kinematics_viz.launch.py
src/seahawk_deck/seahawk_deck/: __main__.py  input_xbox_one.py  motion_controller.py  rviz_markers.py  thrust.py
src/seahawk_description/: CMakeLists.txt  package.xml
src/seahawk_description/launch/: display.launch.py  gazebo.launch.py
src/seahawk_description/rviz/: robot.rviz
src/seahawk_description/urdf/: seahawk_description.csv  seahawk_description.urdf
src/seahawk_gazebo/: CMakeLists.txt  package.xml
src/seahawk_gazebo/config/: ros_gz_bridge.yaml
src/seahawk_gazebo/launch/: gazebo.launch.py  gazebo_gui.launch.py  gazebo_server.launch.py
src/seahawk_gazebo/worlds/: seahawk_sim.sdf
src/seahawk_msgs/: CMakeLists.txt  package.xml
src/seahawk_msgs/msg/: ClawStates.msg  Claws.msg  DebugInfo.msg  InputStates.msg
src/seahawk_rov/: CMakeLists.txt  package.xml  pyproject.toml  requirements.txt  requirements.txt.old  setup.cfg  setup.py
src/seahawk_rov/launch/: rov.launch.py
src/seahawk_rov/rov_mcp2221/: __init__.py  __main__.py
src/seahawk_rov/rov_rpi/: __init__.py  __main__.py
src/seahawk_rov/seahawk_rov/: __init__.py  __main__.py  _logic_tube_bme280.py  _logic_tube_bno085.py  _logic_tube_servo.py  _thrust_box_bme280.py  _thrust_box_servo.py  bme280.py  bno085.py  control_bridge.py  helper_functions.py  logic_tube_bme280.py  logic_tube_bno085.py  logic_tube_motor.py  logic_tube_servo.py  main.py  seahawk_rov.py  thrust_box_bme280.py  thrust_box_servo.py
src/seahawk_rov/seahawk_rov/i2c_proxy/: i2c_proxy.py  logic_tube_bno085.py
src/seahawk_sim/: CMakeLists.txt  package.xml
src/seahawk_sim/config/: ros_gz_bridge.yaml
src/seahawk_sim/launch/: gazebo.launch.py
src/seahawk_sim/models/props/: props.csv  props.urdf
src/seahawk_sim/models/seahawk_2/: model.config  model.sdf
src/seahawk_sim/models/seahawk_2_enhanced/: model.config  model.sdf
src/seahawk_sim/worlds/: product_demo_area.world
src/sensors/: sensors.py  temp_humid.py
src/temp_humid/: temp_humid.py
src/thrust/: thrust.py
src/thrust_box_bme280/: requirements.txt  thrust_box_bme280.py
src/thrust_box_pwm/: thrust_box_pwm.py
(+7 files in other folders)
