<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seahawk_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for seahawk_description</p>
    <p>This package contains configuration data, 3D models and launch files
       for seahawk_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="ISAACGGWAX@GMAIL.COM" />
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: Verify that the dependencies are specified correctly and they're
             all listed-->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>