<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seahawk_rov</name>
  <version>0.0.2</version>
  <description>Package for SeaHawk ROV nodes</description>
  <maintainer email="cabrillorobotics@gmail.com">Cabrillo Robotics Club</maintainer>
  <author email="ciaran@cturtle98.com">Ciaran Farley</author>
  <license>AGPL V3</license>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
