[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seahawk_rov"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "The Seahawk ROV nodes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
